# patchup

./: .dockerignore  Cargo.toml  Dockerfile  README.md
contrib/: hub.toml  patchup-agent-refresh.service  patchup-agent-refresh.timer  patchup-agent.service  patchup-hub.service
contrib/openrc/: patchup-agent.confd  patchup-agent.cron  patchup-agent.initd  patchup-hub.confd  patchup-hub.initd
contrib/systemd/: patchup-agent-refresh.service  patchup-agent-refresh.timer  patchup-agent.service  patchup-agent.socket
src/: args.rs  config.rs  errors.rs  keygen.rs  main.rs  node.rs  prompt.rs  signals.rs  ssh.rs  wire.rs
src/agent/: disk.rs  mod.rs  refresh.rs  sandbox.rs  ssh.rs
src/agent/kernels/: linux.rs  mod.rs  sort.rs
src/agent/patches/: apk.rs  apt.rs  mod.rs  pacman.rs
src/hub/: config.rs  metrics.rs  mod.rs  ssh.rs
src/ipc/: agent.rs  mod.rs
