[package]
name = "patchup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1.9.1"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
env_logger = "0.11"
etcetera = "0.11"
humantime = "2"
log = "0.4"
rand = "0.10"
russh = { version = "0.61", features = ["serde"] }
sd-listen-fds = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["fs", "io-std", "macros", "process", "rt-multi-thread"] }
toml = "1"

[target.'cfg(target_os="linux")'.dependencies]
landlock = "0.4"
