[package]
name = "patchup"
version = "0.1.0"
description = "SSH based least privilege patch management"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/patchup"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-tempfile = "0.8.0"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
env_logger = "0.11"
etcetera = "0.11"
humantime = "2"
log = "0.4"
platform-info = "2"
prometheus = { version = "0.14", default-features = false }
rand = "0.10"
russh = { version = "0.61", features = ["serde"] }
sd-listen-fds = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
shell-words = "1"
tokio = { version = "1", features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "signal"] }
toml = "1"
warp = { version = "0.4", default-features = false, features = ["server"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(not(target_os = "openbsd"))'.dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
